[Documents] Fix editable dialogbox naming strategy when used inside area - fix edit button overlapping css #8890

--- a/bundles/AdminBundle/Resources/public/css/editmode.css
+++ b/bundles/AdminBundle/Resources/public/css/editmode.css
@@ -459,11 +459,9 @@ input.cke_dialog_ui_input_tel {
 
 .pimcore_area_entry .pimcore_area_dialog,
 .pimcore_editable_area .pimcore_area_dialog {
-    position:absolute;
-    width:25px;
-    height:25px;
-    right:5px;
-    top:5px;
+    position:relative;
+    float: right;
+    z-index: 10001;
 }
 
 .pimcore_areablock_dialogBox .x-fieldset-body {
